<resources>
    <string name="app_name">WetMyPlants</string>

    <!-- Strings related to Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password2">Password doesn\'t match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Register -->
    <string name="title_activity_registration">User Registration</string>
    <string name="hint_firstName">First name</string>
    <string name="hint_lastName">Last name</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="regBtn">Register</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">User Settings</string>
    <string name="notification_prompt">How would you like to receive notifications?</string>
    <string name="email_notifications">Email</string>
    <string name="text_notifications">Text</string>
    <string name="noneNotif">None</string>
    <string name="color_theme_selection">Color Theme:</string>
    <string-array name="color_theme_options">
        <item>Default</item>
        <item>Brave</item>
        <item>Mystery</item>
        <item>Calm</item>
        <item>Serene</item>
    </string-array>

    <!-- Strings related to Dashboard -->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="account_icon">My Account</string>
    <string name="plants_icon">My Plants</string>
    <string name="hub_icon">Hubs</string>
    <string name="logout_icon">Log Out</string>
    <string name="notification_icon">Notification</string>
    <string name="setting_icon">Setting</string>
    <string name="title_activity_hub">My Hubs</string>

    <!-- Strings related to Account -->
    <string name="title_activity_account">My Account</string>
    <string name="update_icon">Update</string>
    <string name="first_text">First Name:</string>
    <string name="last_text">Last Name:</string>
    <string name="phone_text">Phone:</string>
    <string name="email_text">Email:</string>
    <string name="pass_text">Password:</string>
    <string name="pass">Password:</string>
    <string name="plantId_hint">Sensor MAC serial number</string>

    <string name="newfname">New first name</string>
    <string name="newlname">New last name</string>
    <string name="newphone">New phone number</string>
    <string name="newemail">New email address</string>
    <string name="newpassword">New Password</string>
    <string name="warnLabel">Note: When left blank, data will not be updated.</string>

    <!-- Strings related to Editing Account -->
    <string name="title_activity_edit_account">Edit User Account</string>
    <string name="edit_acc">Edit Account</string>
    <string name="del_acc">Delete Account</string>
    <string name="updatePassword">Update Password</string>

    <!-- Strings related to creating New Password -->
    <string name="title_activity_newpass">Create New Password</string>
    <string name="update_password">Update Password</string>
    <string name="newpass">New Password</string>
    <string name="newpass_again">Confirm New Password</string>
    <string name="error_NoMatch_password">Password does not match</string>

    <!-- Strings related to Plant list-->
    <string name="title_activity_plant">Your Plants</string>
    <string name="add_plant">Add Plant</string>
    <string name="sample_plant">Sample plant</string>

    <!-- Strings related to Plant Detail Info -->
    <string name="curr_stat">Current Status</string>
    <string name="plant_name">Plant name:</string>
    <string name="plant_species">Species:</string>
    <string name="curr_water">Water Level:</string>
    <string name="curr_light">Light intensity:</string>
    <string name="humidity_unit">g/m^3</string>
    <string name="light_unit">lux</string>
    <string name="deactive">::temp. deactivated::</string>
    <string name="batt_stat">Power status:</string>
    <string name="percent">%</string>
    <string name="title_activity_detail_plant">Plants Detail</string>
    <string name="fabdelete">Delete</string>
    <string name="fabedit">Edit Plant</string>
    <string name="plantdetailmenu">Menu</string>
    <string name="sensor_id">Sensor MAC#:</string>

    <!-- Strings related to Editing Plant Info -->
    <string name="title_activity_edit_plant">Update Plant</string>
    <string name="update_plant_info">New Plant Information</string>
    <string name="new_plant_name">Enter new name</string>
    <string name="new_plant_id">Enter new sensor id</string>
    <string name="update_plant_btn">Update Plant</string>
    <string name="update_plant_icon">  Submit Update  </string>
    <string name="update_id_plant_label">Plant ID :</string>

    <!-- Strings related to Notification Alert -->
    <string name="alertVersionMssg">This feature will be available in WetMyPlant Ver2.0</string>
    <string name="title_notif_activity">Notification Log</string>

    <!-- Strings related to Adding Plant -->
    <string name="title_add_plant">Add your plant</string>
    <string name="bluetooth_num">Sensor MAC#:</string>
    <string name="submit_newPlant">Submit New Plant</string>
    <string name="hint_sensor_serial">A8:99:B2:05:C9:5T</string>
    <string name="add_species_label">Default</string>
    <string-array name="species_options">
        <item>Click here</item>
        <item>Species Type One</item>
        <item>Species Type Two</item>
        <item>Species Type Three</item>
    </string-array>

    <!-- Strings related to Pin Confirmation -->
    <string name="pin_choice">Choose how to get your confirmation pin:</string>
    <string name="emailBtn">Email</string>
    <string name="textBtn">Text</string>
    <string name="my_pin_hint">987654</string>
    <string name="enterpinhere">Enter your six digits PIN number here:</string>
    <string name="submit_pin">Submit PIN</string>
    <string name="title_pinconfirm">PIN Confirmation</string>

    <string name="title_update_pass">Update Password</string>
    <string name="createNewPass">Create New Password</string>
    <string name="newPassOne">New Password</string>
    <string name="newPassTwo">Confirm Password</string>
    <string name="newPassOneHint">Enter new password</string>
    <string name="newPassTwoHint">Confirm</string>

    <string name="title_add_plant_activity">Add New Plant</string>
    <string name="activate">ACTIVATE</string>

</resources>
