<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/plantDetailTableLayout"
    android:stretchColumns="1,2,3"
    android:padding="5dp"
    tools:showIn="@layout/activity_plantdetail">

    <!-- tableRowPlant0 -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowPlant0"
        android:paddingTop="25dp">
        <TextView
            android:id="@+id/plantTopBarLabel"
            android:text="@string/curr_stat"
            android:layout_span="3"
            android:gravity="center"
            android:textSize="25sp"
            style="@style/myStyleTextView"/>
    </TableRow>

    <!-- tableRowPlant1 -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowPlant1"
        android:paddingTop="25dp">
        <TextView
            android:id="@+id/plantNameLabel"
            android:text="@string/plant_name"
            style="@style/myStyleTextView"/>
        <TextView
            android:id="@+id/plantNameTextView"
            style="@style/myStyleTextViewBorder"/>
    </TableRow>

    <!-- tableRowPlant2-->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowPlant2"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/humidityLabel"
            android:text="@string/curr_water"
            style="@style/myStyleTextView"/>
        <TextView
            android:id="@+id/currWaterTextView"
            style="@style/myStyleTextViewBorder"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/waterUnitLabel"
            android:text="@string/humidity_unit"
            android:textSize="16sp"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_column="2"/>
    </TableRow>

    <!-- tableRowPlant3-->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowPlant3"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/lightLabel"
            android:text="@string/curr_light"
            style="@style/myStyleTextView"/>
        <TextView
            android:id="@+id/lightTextView"
            style="@style/myStyleTextViewBorder"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/lightUnitLabel"
            android:text="@string/light_unit"
            android:textSize="16sp"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_column="2"/>
    </TableRow>

    <!-- tableRowPlant4-->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowPlant4"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/battLevelLabel"
            android:text="@string/batt_stat"
            style="@style/myStyleTextView"/>
        <TextView
            android:id="@+id/battTextView"
            android:text="@string/deactive"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            style="@style/myStyleTextViewBorder"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/battUnitLabel"
            android:text="@string/percent"
            android:textSize="16sp"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_column="2"/>
    </TableRow>

</TableLayout>
