<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pinConfirmTableLayout"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".activities.ForgotPasswordActivity">

    <EditText
        android:id="@+id/email_pinconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        style="@style/myStyleTextViewBorder"/>

    <TextView
        android:id="@+id/text_pinconfirm"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/pin_choice"
        android:textSize="16sp"
        android:textColor="@color/darkGrey"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/emailBtn_pin"
            android:text="@string/emailBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textAllCaps="false"
            style="?android:textAppearanceSmall"
            android:background="@drawable/button_round_grey"/>
        <Button
            android:id="@+id/textBtn_pin"
            android:text="@string/textBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textAllCaps="false"
            style="?android:textAppearanceSmall"
            android:background="@drawable/button_round_grey"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_pinconfirm2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/enterpinhere"
        android:textSize="16sp"
        android:textColor="@color/darkGrey"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/pinconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="5dp"
        android:hint="@string/my_pin_hint"
        style="@style/myStyleTextViewBorder"/>


    <Button
        android:id="@+id/submitBtn_pin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/submit_pin"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        style="?android:textAppearanceSmall"
        android:background="@drawable/button_round_green"/>


</LinearLayout>
