<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/wmp_xxdpi"
    tools:showIn="@layout/activity_plantdetail">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/plantDetailTableLayout"
        android:stretchColumns="1"
        android:padding="5dp">
        <!-- tableRowPlant0 -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tableRowPlant0"
            android:paddingTop="25dp">
            <TextView
                android:id="@+id/plantTopBarLabel"
                android:text="@string/curr_stat"
                android:textColor="@color/colorPrimary"
                android:layout_span="3"
                android:gravity="center"
                android:textSize="25sp"
                style="@style/myStyleTextView"/>
        </TableRow>

        <!-- tableRowPlant1 -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tableRowPlant1"
            android:paddingTop="25dp">
            <TextView
                android:id="@+id/plantNameLabel"
                android:text="@string/plant_name"
                style="@style/myStyleTextView"/>
            <TextView
                android:id="@+id/plantDetail_nameTextOut"
                android:textColor="@color/black"
                style="@style/myStyleTextViewBorder"/>
        </TableRow>

        <!-- tableRowPlant2 -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tableRowPlant2"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/plantIdLabel"
                android:text="@string/sensor_id"
                style="@style/myStyleTextView"/>
            <TextView
                android:id="@+id/plantDetail_plantIdTextOut"
                android:textColor="@color/black"
                style="@style/myStyleTextViewBorder"/>
        </TableRow>

        <!-- tableRowPlant3-->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tableRowPlant3"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/humidityLabel"
                android:text="@string/curr_water"
                style="@style/myStyleTextView"/>
            <TextView
                android:id="@+id/plantDetail_waterTextOut"
                android:textColor="@color/black"
                style="@style/myStyleTextViewBorder"
                android:layout_column="1"/>
            <TextView
                android:id="@+id/waterUnitLabel"
                android:text="@string/humidity_unit"
                android:textSize="16sp"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_column="2"/>
        </TableRow>

        <!-- tableRowPlant4-->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tableRowPlant4"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/lightLabel"
                android:text="@string/curr_light"
                style="@style/myStyleTextView"/>
            <TextView
                android:id="@+id/plantDetail_lightTextOut"
                android:textColor="@color/black"
                style="@style/myStyleTextViewBorder"
                android:layout_column="1"/>
            <TextView
                android:id="@+id/lightUnitLabel"
                android:text="@string/light_unit"
                android:textSize="16sp"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_column="2"/>
        </TableRow>

        <!-- tableRowPlant5-->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tableRowPlant5"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/battLevelLabel"
                android:text="@string/batt_stat"
                style="@style/myStyleTextView"/>
            <TextView
                android:id="@+id/battTextView"
                android:text="@string/deactive"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                style="@style/myStyleTextViewBorder"
                android:layout_column="1"/>
            <TextView
                android:id="@+id/battUnitLabel"
                android:text="@string/percent"
                android:textSize="16sp"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/plantDetail_homeFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_16"
        android:layout_marginLeft="@dimen/std_16"
        android:layout_gravity="bottom|start"
        app:fabSize="auto"
        android:layout_margin="16dp"
        android:src="@drawable/homie"/>

</android.support.design.widget.CoordinatorLayout>
