<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/accountTableLayout"
    android:stretchColumns="1,2"
    android:padding="5dp"
    tools:context=".activities.EditaccountActivity">

    <!-- tableRowAccount0 -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowAccount0"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/userImageView"
            android:contentDescription="@string/title_activity_account"
            android:layout_width="45dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/me_profile" />
    </TableRow>

    <!-- tableRowAccount1 -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowAccount1"
        android:paddingTop="25dp">
        <TextView
            android:id="@+id/firstLabelTextView"
            style="@style/AccountTextView"
            android:text="@string/first_text"/>
        <EditText
            android:id="@+id/firstEditText"
            style="@style/AccountTextViewBorder"/>
    </TableRow>

    <!-- tableRowAccount2-->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowAccount2"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/lastLabelTextView"
            android:text="@string/last_text"
            style="@style/AccountTextView"/>
        <EditText
            android:id="@+id/lastEditText"
            style="@style/AccountTextViewBorder"/>
    </TableRow>

    <!-- tableRowAccount3-->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowAccount3"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/phoneLabelTextView"
            android:text="@string/phone_text"
            style="@style/AccountTextView"/>
        <EditText
            android:id="@+id/phoneEditText"
            style="@style/AccountTextViewBorder"/>
    </TableRow>

    <!-- tableRowAccount4-->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowAccount4"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/emailLabelTextView"
            android:text="@string/email_text"
            style="@style/AccountTextView"/>
        <EditText
            android:id="@+id/emailEditText"
            style="@style/AccountTextViewBorder"/>
    </TableRow>

    <!-- tableRowAccount5-->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowAccount5"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/passLabelTextView"
            android:text="@string/pass_text"
            style="@style/AccountTextView"/>
        <EditText
            android:id="@+id/passEditText"
            style="@style/AccountTextViewBorder"/>
    </TableRow>

    <!-- tableRowAccount6 -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRowAccount6"
        android:gravity="center">
        <Button
            android:id="@+id/update_user_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/update_icon"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
    </TableRow>

</TableLayout>

