<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/updatePwdTableLayout"
    android:orientation="vertical"
    android:stretchColumns="1"
    android:padding="5dp"
    tools:context=".activities.UpdatePasswordActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/passOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassOne"
            android:inputType="text"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_register"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/passTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassTwo"
            android:inputType="text"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_register"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/updatePasswordBtn"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:text="@string/updatePassword"
        android:textAllCaps="false"
        android:background="@drawable/button_round_green"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>

</LinearLayout>


